[package]
name = "builder"
version = "0.1.0"
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3.9"
dirs = "3.0.1"
flate2 = "1.0.19"
serde = "1.0.117"
serde_json = "1.0.59"
wasmprinter = "0.2"
wat = "1.0"
