[package]
authors = ["TON Labs <support@tonlabs.io>"]
edition = "2018"
name = "debot-browser"
version = "0.5.5"
description = "Standalone cli DeBot Browser"
repository = "https://github.com/tonlabs/rust-debot-browser"
license = "Apache-2.0"
keywords = [
    "debot browser",
    "debot",
    "browser",
    "wasm",
    "tonlabs",
    "Surf",
    "Everscale",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = [] # "console_error_panic_hook", 

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[dependencies]
async-trait = "0.1.42"
base64 = '0.10.1'
# logging them with `console.error`. This is great for development, but requires
# The `console_error_panic_hook` crate provides better debugging of panics by
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }
hex = "0.3.2"
js-sys = "0.3.55"
lazy_static = "1.1.0"
log = { version = "0.4.11", features = ["std"] }
num-bigint = "0.4"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
rand = "0.7.3"
regex = "1.5.4"
serde-wasm-bindgen = "0.3.1"
tokio = { version = "0.2.13", features = [
    "sync",
    "stream",
], default-features = false }

ton_client = { git = 'https://github.com/tonlabs/TON-SDK.git', tag = '1.32.0', default-features = false, features = [
    "wasm",
] }

wasm-bindgen = "0.2.77"
wasm-bindgen-futures = "0.4.27"

[dev-dependencies]
wasm-bindgen-test = "0.3.26"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']

[profile.release]
#lto = true
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[dependencies.clear_on_drop]
features = ["no_cc"]
version = "0.2"      #This version should match the version that the ed25519-dalek crate depends on.