[package]
authors = ["Ever Guild"]
edition = "2018"
name = "debot-browser"
version = "0.6.0-rc.2"
description = "Standalone debot browser"
repository = "https://github.com/ever-guild/debot-browser"
license = "Apache-2.0"
keywords = [
    "debot browser",
    "debot",
    "browser",
    "wasm",
    "tvm",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = [] # "console_error_panic_hook",

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[dependencies]
async-trait = "0.1.42"
base64 = '0.10.1'
# logging them with `console.error`. This is great for development, but requires
# The `console_error_panic_hook` crate provides better debugging of panics by
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }
hex = "0.4.3"
js-sys = "0.3.62"
lazy_static = "1.4.0"
log = { version = "0.4.17", features = ["std"] }
num-bigint = "0.4.3"
num-traits = "0.2.15"
serde = { version = "1.0.163", features = ["derive"] }
serde_derive = "1.0.163"
serde_json = "1.0.96"
rand = "0.8.5"
regex = "1.8.1"
serde-wasm-bindgen = "0.5.0"
tokio = "^1"
wasm-bindgen = "0.2.85"
wasm-bindgen-futures = "0.4.35"
ton_client = { git = 'https://github.com/tonlabs/ever-sdk.git', tag = '1.42.1', default-features = false, features = [
    "wasm",
] }

[dev-dependencies]
wasm-bindgen-test = "0.3.35"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]

[dependencies.clear_on_drop]
features = ["no_cc"]
version = "0.2" # This version should match the version that the ed25519-dalek crate depends on.
